--- a/2 Y regressions.html
+++ b/2 Y regressions.html
@@ -8,53 +8,53 @@
 <tr><td style="text-align:left"></td><td><em>logistic</em></td><td><em>GAM</em></td></tr>
 <tr><td style="text-align:left"></td><td><em></em></td><td><em>(logistic)</em></td></tr>
 <tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td></tr>
-<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">SES_group6-8</td><td>0.308<sup>*</sup></td><td>0.319<sup>*</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.170)</td><td>(0.171)</td></tr>
+<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">SES_group6-8</td><td>0.245</td><td>0.248</td></tr>
+<tr><td style="text-align:left"></td><td>(0.158)</td><td>(0.158)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">SES_group9-10</td><td>0.127</td><td>0.124</td></tr>
-<tr><td style="text-align:left"></td><td>(0.200)</td><td>(0.201)</td></tr>
+<tr><td style="text-align:left">SES_group9-10</td><td>0.086</td><td>0.091</td></tr>
+<tr><td style="text-align:left"></td><td>(0.187)</td><td>(0.187)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">gender</td><td>-0.247<sup>**</sup></td><td>-0.250<sup>**</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.113)</td><td>(0.113)</td></tr>
+<tr><td style="text-align:left">gender</td><td>-0.272<sup>***</sup></td><td>-0.276<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.105)</td><td>(0.105)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">mother_Atopic_diseases</td><td>-0.038</td><td>-0.043</td></tr>
-<tr><td style="text-align:left"></td><td>(0.147)</td><td>(0.148)</td></tr>
+<tr><td style="text-align:left">mother_Atopic_diseases</td><td>0.025</td><td>0.023</td></tr>
+<tr><td style="text-align:left"></td><td>(0.137)</td><td>(0.137)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">father_Atopic_diseases</td><td>0.346<sup>**</sup></td><td>0.352<sup>**</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.172)</td><td>(0.173)</td></tr>
+<tr><td style="text-align:left">father_Atopic_diseases</td><td>0.253</td><td>0.258</td></tr>
+<tr><td style="text-align:left"></td><td>(0.160)</td><td>(0.160)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">mother_year_birth</td><td>-0.002</td><td>-0.005</td></tr>
-<tr><td style="text-align:left"></td><td>(0.014)</td><td>(0.014)</td></tr>
+<tr><td style="text-align:left">mother_year_birth</td><td>-0.004</td><td>-0.006</td></tr>
+<tr><td style="text-align:left"></td><td>(0.013)</td><td>(0.013)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">mother_education2</td><td>0.184</td><td>0.183</td></tr>
-<tr><td style="text-align:left"></td><td>(0.236)</td><td>(0.237)</td></tr>
+<tr><td style="text-align:left">mother_education2</td><td>-0.034</td><td>-0.044</td></tr>
+<tr><td style="text-align:left"></td><td>(0.223)</td><td>(0.222)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">mother_education3</td><td>0.353<sup>**</sup></td><td>0.353<sup>**</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.176)</td><td>(0.176)</td></tr>
+<tr><td style="text-align:left">mother_education3</td><td>0.176</td><td>0.172</td></tr>
+<tr><td style="text-align:left"></td><td>(0.164)</td><td>(0.164)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">number_of_children</td><td>-0.118<sup>**</sup></td><td>-0.121<sup>**</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.057)</td><td>(0.057)</td></tr>
+<tr><td style="text-align:left">number_of_children</td><td>-0.135<sup>**</sup></td><td>-0.138<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.052)</td><td>(0.052)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">type_of_pregnancy1</td><td>-0.074</td><td>-0.058</td></tr>
-<tr><td style="text-align:left"></td><td>(0.209)</td><td>(0.210)</td></tr>
+<tr><td style="text-align:left">type_of_pregnancy1</td><td>0.096</td><td>0.112</td></tr>
+<tr><td style="text-align:left"></td><td>(0.192)</td><td>(0.192)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">vaccine_12mo</td><td>0.191</td><td>0.204</td></tr>
-<tr><td style="text-align:left"></td><td>(0.266)</td><td>(0.267)</td></tr>
+<tr><td style="text-align:left">vaccine_12mo</td><td>0.292</td><td>0.302</td></tr>
+<tr><td style="text-align:left"></td><td>(0.257)</td><td>(0.257)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">nursing_setup_at_12mo2</td><td>-0.095</td><td>-0.067</td></tr>
-<tr><td style="text-align:left"></td><td>(0.233)</td><td>(0.235)</td></tr>
+<tr><td style="text-align:left">nursing_setup_at_12mo2</td><td>-0.122</td><td>-0.104</td></tr>
+<tr><td style="text-align:left"></td><td>(0.217)</td><td>(0.217)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">nursing_setup_at_12mo3</td><td>0.170</td><td>0.180</td></tr>
-<tr><td style="text-align:left"></td><td>(0.127)</td><td>(0.128)</td></tr>
+<tr><td style="text-align:left">nursing_setup_at_12mo3</td><td>0.185</td><td>0.170</td></tr>
+<tr><td style="text-align:left"></td><td>(0.119)</td><td>(0.119)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">covid_time2</td><td>0.357<sup>**</sup></td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(0.178)</td><td></td></tr>
+<tr><td style="text-align:left">covid_time2</td><td>0.368<sup>**</sup></td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(0.177)</td><td></td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">covid_time3</td><td>0.695<sup>***</sup></td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(0.186)</td><td></td></tr>
+<tr><td style="text-align:left">covid_time3</td><td>0.718<sup>***</sup></td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(0.183)</td><td></td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">covid_time4</td><td>0.615</td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(0.425)</td><td></td></tr>
+<tr><td style="text-align:left">covid_time4</td><td>0.718<sup>***</sup></td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(0.223)</td><td></td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
 <tr><td style="text-align:left">s(DOB_count).1</td><td></td><td></td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
@@ -83,14 +83,14 @@
 <tr><td style="text-align:left">s(DOB_count).9</td><td></td><td></td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Constant</td><td>4.431</td><td>10.485</td></tr>
-<tr><td style="text-align:left"></td><td>(28.455)</td><td>(28.735)</td></tr>
+<tr><td style="text-align:left">Constant</td><td>-0.393</td><td>0.149</td></tr>
+<tr><td style="text-align:left"></td><td>(0.522)</td><td>(0.525)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>1,396</td><td>1,396</td></tr>
-<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td></td><td>0.028</td></tr>
-<tr><td style="text-align:left">Log Likelihood</td><td>-907.010</td><td>-920.860</td></tr>
-<tr><td style="text-align:left">Akaike Inf. Crit.</td><td>1,848.000</td><td></td></tr>
-<tr><td style="text-align:left">UBRE</td><td></td><td>0.319</td></tr>
+<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>1,630</td><td>1,630</td></tr>
+<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td></td><td>0.025</td></tr>
+<tr><td style="text-align:left">Log Likelihood</td><td>-1,050.400</td><td>-1,064.300</td></tr>
+<tr><td style="text-align:left">Akaike Inf. Crit.</td><td>2,134.900</td><td></td></tr>
+<tr><td style="text-align:left">UBRE</td><td></td><td>0.306</td></tr>
 <tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="2" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
 </table>
 </body>
