--- a/GAM 2 Y.html
+++ b/GAM 2 Y.html
@@ -5,35 +5,35 @@
 <table style="text-align:center"><tr><td colspan="2" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td><em>Dependent variable:</em></td></tr>
 <tr><td></td><td colspan="1" style="border-bottom: 1px solid black"></td></tr>
 <tr><td style="text-align:left"></td><td>is_atopic_first_year</td></tr>
-<tr><td colspan="2" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">SES_group6-8</td><td>0.473<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.174)</td></tr>
+<tr><td colspan="2" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">SES_group6-8</td><td>0.454<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.161)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
-<tr><td style="text-align:left">SES_group9-10</td><td>0.378<sup>*</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.204)</td></tr>
+<tr><td style="text-align:left">SES_group9-10</td><td>0.362<sup>*</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.191)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
-<tr><td style="text-align:left">gender</td><td>-0.429<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.116)</td></tr>
+<tr><td style="text-align:left">gender</td><td>-0.459<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.109)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
-<tr><td style="text-align:left">type_of_pregnancy1</td><td>-0.404<sup>*</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.220)</td></tr>
+<tr><td style="text-align:left">type_of_pregnancy1</td><td>-0.376<sup>*</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.206)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
-<tr><td style="text-align:left">mother_Atopic_diseases</td><td>0.037</td></tr>
-<tr><td style="text-align:left"></td><td>(0.153)</td></tr>
+<tr><td style="text-align:left">mother_Atopic_diseases</td><td>-0.023</td></tr>
+<tr><td style="text-align:left"></td><td>(0.142)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
-<tr><td style="text-align:left">father_Atopic_diseases</td><td>0.215</td></tr>
-<tr><td style="text-align:left"></td><td>(0.174)</td></tr>
+<tr><td style="text-align:left">father_Atopic_diseases</td><td>0.185</td></tr>
+<tr><td style="text-align:left"></td><td>(0.163)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
-<tr><td style="text-align:left">mother_year_birth</td><td>0.040<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.015)</td></tr>
+<tr><td style="text-align:left">mother_year_birth</td><td>0.039<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.014)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
-<tr><td style="text-align:left">mother_education2</td><td>0.630<sup>**</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.254)</td></tr>
+<tr><td style="text-align:left">mother_education2</td><td>0.451<sup>*</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.238)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
-<tr><td style="text-align:left">mother_education3</td><td>0.270</td></tr>
-<tr><td style="text-align:left"></td><td>(0.181)</td></tr>
+<tr><td style="text-align:left">mother_education3</td><td>0.228</td></tr>
+<tr><td style="text-align:left"></td><td>(0.169)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
-<tr><td style="text-align:left">number_of_children</td><td>0.046</td></tr>
-<tr><td style="text-align:left"></td><td>(0.059)</td></tr>
+<tr><td style="text-align:left">number_of_children</td><td>0.044</td></tr>
+<tr><td style="text-align:left"></td><td>(0.055)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
 <tr><td style="text-align:left">s(DOB_count).1</td><td></td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
@@ -62,13 +62,13 @@
 <tr><td style="text-align:left">s(DOB_count).9</td><td></td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
-<tr><td style="text-align:left">Constant</td><td>-78.627<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(29.708)</td></tr>
+<tr><td style="text-align:left">Constant</td><td>-0.360</td></tr>
+<tr><td style="text-align:left"></td><td>(0.473)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
-<tr><td colspan="2" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>1,396</td></tr>
-<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.050</td></tr>
-<tr><td style="text-align:left">Log Likelihood</td><td>-877.370</td></tr>
-<tr><td style="text-align:left">UBRE</td><td>0.257</td></tr>
+<tr><td colspan="2" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>1,630</td></tr>
+<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.049</td></tr>
+<tr><td style="text-align:left">Log Likelihood</td><td>-1,005.000</td></tr>
+<tr><td style="text-align:left">UBRE</td><td>0.233</td></tr>
 <tr><td colspan="2" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
 </table>
 </body>
