--- a/GAM.html
+++ b/GAM.html
@@ -12,7 +12,7 @@
 <tr><td style="text-align:left">SES_group9-10</td><td>0.362<sup>*</sup></td><td>0.091</td></tr>
 <tr><td style="text-align:left"></td><td>(0.191)</td><td>(0.187)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">gender</td><td>-0.459<sup>***</sup></td><td>-0.276<sup>***</sup></td></tr>
+<tr><td style="text-align:left">gender1</td><td>-0.459<sup>***</sup></td><td>-0.276<sup>***</sup></td></tr>
 <tr><td style="text-align:left"></td><td>(0.109)</td><td>(0.105)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
 <tr><td style="text-align:left">type_of_pregnancy1</td><td>-0.376<sup>*</sup></td><td>0.112</td></tr>
@@ -27,10 +27,10 @@
 <tr><td style="text-align:left">nursing_setup_at_12mo3</td><td></td><td>0.170</td></tr>
 <tr><td style="text-align:left"></td><td></td><td>(0.119)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">mother_Atopic_diseases</td><td>-0.023</td><td>0.023</td></tr>
+<tr><td style="text-align:left">mother_Atopic_diseases1</td><td>-0.023</td><td>0.023</td></tr>
 <tr><td style="text-align:left"></td><td>(0.142)</td><td>(0.137)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">father_Atopic_diseases</td><td>0.185</td><td>0.258</td></tr>
+<tr><td style="text-align:left">father_Atopic_diseases1</td><td>0.185</td><td>0.258</td></tr>
 <tr><td style="text-align:left"></td><td>(0.163)</td><td>(0.160)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
 <tr><td style="text-align:left">mother_year_birth</td><td>0.039<sup>***</sup></td><td>-0.006</td></tr>
